--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>hi</h1>
+  </body>
 </html>
